# CudaBasics

./: README.md  device_check.cu
1_BasicCudaProgram/: basicCuda.cu
2_WhenToUseGPU/: cpu_gpu_compare.cu  main.cpp
3_MoreCudaCode/: CudaDeterminants.cu  CudaDeterminantsDef.cu  CudaWithErrors.cu
4_ThrustBasics/src/: CMakeLists.txt  simpleThrust.cu
5_ThrustSortComparison/src/: CMakeLists.txt  sortComparison.cu  sortComparisonWithoutC11.cu
6_ThrustOrCuda/: thrust_or_cuda.cu  thrust_or_cuda_reductions.cu
7_MoreThrustExamples/: many_sort_examples.cu  permutation_zip.cu
8_MD5Cracker/: MD5cracker.cu
WhenToUseGPU/: main.cpp  main.cu
